# qfreecell

./: AUTHORS  ChangeLog  Makefile  README  TODO  cards.cpp  cards.h  ccongratulation.cpp  ccongratulation.h  ccongratulationdata.cpp  closewarning.cpp  closewarning.h  closewarningdata.cpp  coptions.cpp  coptions.h  coptionsdata.cpp  cselectgamedlg.cpp  cselectgamedlg.h  cselectgamedlgdata.cpp  cstatistics.cpp  cstatistics.h  cstatisticsdata.cpp  freecell.cpp  freecell.h  freecelldoc.cpp  freecelldoc.h  freecellview.cpp  freecellview.h  lostdlg.cpp  lostdlg.h  lostdlgdata.cpp  main.cpp  main.h  qbuild.pro  qfreecell.pro  qresources.qrc  qtmoko-freecell.desktop  resource.h
debian/: changelog  control  copyright  rules
docs/: Makefile.in
docs/en/: Makefile.am  Makefile.in  index-1.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index.html  index.sgml
pictures/: Makefile.am  Makefile.in
pictures/backgrounds/: Makefile.am  Makefile.in
pictures/cards/: Makefile.am  Makefile.in
pictures/freecells/: Makefile.am  Makefile.in
