####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = qfreecell.bmp 

install-data-local:
	$(mkinstalldirs) $(prefix)/bin/pictures/backgrounds/
	$(INSTALL_DATA) qfreecell.bmp $(prefix)/bin/pictures/backgrounds/qfreecell.bmp

uninstall-local:
	-rm -f $(prefix)/bin/pictures/backgrounds/qfreecell.bmp

####### kdevelop will overwrite this part!!! (end)############
