####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = 1.bmp 10.bmp 11.bmp 12.bmp 13.bmp 14.bmp 15.bmp 16.bmp 17.bmp 18.bmp 19.bmp 2.bmp 20.bmp 21.bmp 22.bmp 23.bmp 24.bmp 25.bmp 26.bmp 27.bmp 28.bmp 29.bmp 3.bmp 30.bmp 31.bmp 32.bmp 33.bmp 34.bmp 35.bmp 36.bmp 37.bmp 38.bmp 39.bmp 4.bmp 40.bmp 41.bmp 42.bmp 43.bmp 44.bmp 45.bmp 46.bmp 47.bmp 48.bmp 49.bmp 5.bmp 50.bmp 51.bmp 52.bmp 6.bmp 7.bmp 8.bmp 9.bmp 

install-data-local:
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 1.bmp $(prefix)/bin/pictures/cards/1.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 10.bmp $(prefix)/bin/pictures/cards/10.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 11.bmp $(prefix)/bin/pictures/cards/11.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 12.bmp $(prefix)/bin/pictures/cards/12.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 13.bmp $(prefix)/bin/pictures/cards/13.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 14.bmp $(prefix)/bin/pictures/cards/14.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 15.bmp $(prefix)/bin/pictures/cards/15.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 16.bmp $(prefix)/bin/pictures/cards/16.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 17.bmp $(prefix)/bin/pictures/cards/17.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 18.bmp $(prefix)/bin/pictures/cards/18.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 19.bmp $(prefix)/bin/pictures/cards/19.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 2.bmp $(prefix)/bin/pictures/cards/2.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 20.bmp $(prefix)/bin/pictures/cards/20.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 21.bmp $(prefix)/bin/pictures/cards/21.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 22.bmp $(prefix)/bin/pictures/cards/22.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 23.bmp $(prefix)/bin/pictures/cards/23.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 24.bmp $(prefix)/bin/pictures/cards/24.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 25.bmp $(prefix)/bin/pictures/cards/25.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 26.bmp $(prefix)/bin/pictures/cards/26.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 27.bmp $(prefix)/bin/pictures/cards/27.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 28.bmp $(prefix)/bin/pictures/cards/28.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 29.bmp $(prefix)/bin/pictures/cards/29.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 3.bmp $(prefix)/bin/pictures/cards/3.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 30.bmp $(prefix)/bin/pictures/cards/30.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 31.bmp $(prefix)/bin/pictures/cards/31.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 32.bmp $(prefix)/bin/pictures/cards/32.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 33.bmp $(prefix)/bin/pictures/cards/33.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 34.bmp $(prefix)/bin/pictures/cards/34.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 35.bmp $(prefix)/bin/pictures/cards/35.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 36.bmp $(prefix)/bin/pictures/cards/36.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 37.bmp $(prefix)/bin/pictures/cards/37.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 38.bmp $(prefix)/bin/pictures/cards/38.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 39.bmp $(prefix)/bin/pictures/cards/39.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 4.bmp $(prefix)/bin/pictures/cards/4.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 40.bmp $(prefix)/bin/pictures/cards/40.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 41.bmp $(prefix)/bin/pictures/cards/41.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 42.bmp $(prefix)/bin/pictures/cards/42.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 43.bmp $(prefix)/bin/pictures/cards/43.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 44.bmp $(prefix)/bin/pictures/cards/44.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 45.bmp $(prefix)/bin/pictures/cards/45.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 46.bmp $(prefix)/bin/pictures/cards/46.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 47.bmp $(prefix)/bin/pictures/cards/47.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 48.bmp $(prefix)/bin/pictures/cards/48.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 49.bmp $(prefix)/bin/pictures/cards/49.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 5.bmp $(prefix)/bin/pictures/cards/5.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 50.bmp $(prefix)/bin/pictures/cards/50.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 51.bmp $(prefix)/bin/pictures/cards/51.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 52.bmp $(prefix)/bin/pictures/cards/52.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 6.bmp $(prefix)/bin/pictures/cards/6.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 7.bmp $(prefix)/bin/pictures/cards/7.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 8.bmp $(prefix)/bin/pictures/cards/8.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/cards/
	$(INSTALL_DATA) 9.bmp $(prefix)/bin/pictures/cards/9.bmp

uninstall-local:
	-rm -f $(prefix)/bin/pictures/cards/1.bmp
	-rm -f $(prefix)/bin/pictures/cards/10.bmp
	-rm -f $(prefix)/bin/pictures/cards/11.bmp
	-rm -f $(prefix)/bin/pictures/cards/12.bmp
	-rm -f $(prefix)/bin/pictures/cards/13.bmp
	-rm -f $(prefix)/bin/pictures/cards/14.bmp
	-rm -f $(prefix)/bin/pictures/cards/15.bmp
	-rm -f $(prefix)/bin/pictures/cards/16.bmp
	-rm -f $(prefix)/bin/pictures/cards/17.bmp
	-rm -f $(prefix)/bin/pictures/cards/18.bmp
	-rm -f $(prefix)/bin/pictures/cards/19.bmp
	-rm -f $(prefix)/bin/pictures/cards/2.bmp
	-rm -f $(prefix)/bin/pictures/cards/20.bmp
	-rm -f $(prefix)/bin/pictures/cards/21.bmp
	-rm -f $(prefix)/bin/pictures/cards/22.bmp
	-rm -f $(prefix)/bin/pictures/cards/23.bmp
	-rm -f $(prefix)/bin/pictures/cards/24.bmp
	-rm -f $(prefix)/bin/pictures/cards/25.bmp
	-rm -f $(prefix)/bin/pictures/cards/26.bmp
	-rm -f $(prefix)/bin/pictures/cards/27.bmp
	-rm -f $(prefix)/bin/pictures/cards/28.bmp
	-rm -f $(prefix)/bin/pictures/cards/29.bmp
	-rm -f $(prefix)/bin/pictures/cards/3.bmp
	-rm -f $(prefix)/bin/pictures/cards/30.bmp
	-rm -f $(prefix)/bin/pictures/cards/31.bmp
	-rm -f $(prefix)/bin/pictures/cards/32.bmp
	-rm -f $(prefix)/bin/pictures/cards/33.bmp
	-rm -f $(prefix)/bin/pictures/cards/34.bmp
	-rm -f $(prefix)/bin/pictures/cards/35.bmp
	-rm -f $(prefix)/bin/pictures/cards/36.bmp
	-rm -f $(prefix)/bin/pictures/cards/37.bmp
	-rm -f $(prefix)/bin/pictures/cards/38.bmp
	-rm -f $(prefix)/bin/pictures/cards/39.bmp
	-rm -f $(prefix)/bin/pictures/cards/4.bmp
	-rm -f $(prefix)/bin/pictures/cards/40.bmp
	-rm -f $(prefix)/bin/pictures/cards/41.bmp
	-rm -f $(prefix)/bin/pictures/cards/42.bmp
	-rm -f $(prefix)/bin/pictures/cards/43.bmp
	-rm -f $(prefix)/bin/pictures/cards/44.bmp
	-rm -f $(prefix)/bin/pictures/cards/45.bmp
	-rm -f $(prefix)/bin/pictures/cards/46.bmp
	-rm -f $(prefix)/bin/pictures/cards/47.bmp
	-rm -f $(prefix)/bin/pictures/cards/48.bmp
	-rm -f $(prefix)/bin/pictures/cards/49.bmp
	-rm -f $(prefix)/bin/pictures/cards/5.bmp
	-rm -f $(prefix)/bin/pictures/cards/50.bmp
	-rm -f $(prefix)/bin/pictures/cards/51.bmp
	-rm -f $(prefix)/bin/pictures/cards/52.bmp
	-rm -f $(prefix)/bin/pictures/cards/6.bmp
	-rm -f $(prefix)/bin/pictures/cards/7.bmp
	-rm -f $(prefix)/bin/pictures/cards/8.bmp
	-rm -f $(prefix)/bin/pictures/cards/9.bmp

####### kdevelop will overwrite this part!!! (end)############
