####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = empty.bmp empty2.bmp empty3.bmp empty10.bmp empty4.bmp empty5.bmp empty6.bmp empty7.bmp empty8.bmp empty9.bmp 

install-data-local:
	$(mkinstalldirs) $(prefix)/bin/pictures/freecells/
	$(INSTALL_DATA) empty.bmp $(prefix)/bin/pictures/freecells/empty.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/freecells/
	$(INSTALL_DATA) empty2.bmp $(prefix)/bin/pictures/freecells/empty2.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/freecells/
	$(INSTALL_DATA) empty3.bmp $(prefix)/bin/pictures/freecells/empty3.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/freecells/
	$(INSTALL_DATA) empty10.bmp $(prefix)/bin/pictures/freecells/empty10.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/freecells/
	$(INSTALL_DATA) empty4.bmp $(prefix)/bin/pictures/freecells/empty4.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/freecells/
	$(INSTALL_DATA) empty5.bmp $(prefix)/bin/pictures/freecells/empty5.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/freecells/
	$(INSTALL_DATA) empty6.bmp $(prefix)/bin/pictures/freecells/empty6.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/freecells/
	$(INSTALL_DATA) empty7.bmp $(prefix)/bin/pictures/freecells/empty7.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/freecells/
	$(INSTALL_DATA) empty8.bmp $(prefix)/bin/pictures/freecells/empty8.bmp
	$(mkinstalldirs) $(prefix)/bin/pictures/freecells/
	$(INSTALL_DATA) empty9.bmp $(prefix)/bin/pictures/freecells/empty9.bmp

uninstall-local:
	-rm -f $(prefix)/bin/pictures/freecells/empty.bmp
	-rm -f $(prefix)/bin/pictures/freecells/empty2.bmp
	-rm -f $(prefix)/bin/pictures/freecells/empty3.bmp
	-rm -f $(prefix)/bin/pictures/freecells/empty10.bmp
	-rm -f $(prefix)/bin/pictures/freecells/empty4.bmp
	-rm -f $(prefix)/bin/pictures/freecells/empty5.bmp
	-rm -f $(prefix)/bin/pictures/freecells/empty6.bmp
	-rm -f $(prefix)/bin/pictures/freecells/empty7.bmp
	-rm -f $(prefix)/bin/pictures/freecells/empty8.bmp
	-rm -f $(prefix)/bin/pictures/freecells/empty9.bmp

####### kdevelop will overwrite this part!!! (end)############
